# n_machine

./: .gitignore  pyproject.toml
assets/: userlist.pkl
n_machine/: main.py
output/test/: comment_extraction_reservoir-sampled_based-on_pronoun-declarers_from-month__from_RC_2013-06.zst_executed-at_2024-04-24_at_18h-53m-42s_RC_2013-06.zst_filtered-out_matches.csv  comment_extraction_reservoir-sampled_based-on_pronoun-declarers_from-month__from_RC_2013-06.zst_executed-at_2024-04-24_at_19h-29m-29s_RC_2013-06.zst.csv  comment_extraction_reservoir-sampled_based-on_pronoun-declarers_from-month__from_RC_2013-07.zst_executed-at_2024-04-24_at_19h-26m-07s_RC_2013-07.zst.csv  flairtexts.txt
