[tool.poetry]
name = "n-machine"
version = "0.1.0"
description = ""
authors = ["Smogshaik <github@smog.sh>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
zstandard = "^0.22.0"
pandas = "^2.2.2"
langdetect = "^1.0.9"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
